fix align #884

--- a/themes/scss/widgets/shapes.scss
+++ b/themes/scss/widgets/shapes.scss
@@ -13,11 +13,11 @@
 .Widget-threePoints {
   display: inline-block;
   position: relative;
+  width: 3px;
   height: 16px;
   margin-right: -10px;  
   margin-left: 6px;
   padding: 0 10px;
-  border-radius: 50%;
   text-align: center;
   vertical-align: middle;
 
@@ -34,11 +34,11 @@
  
   &:before { 
     top: 0;
-    right: 10px;
+    right: 7px;
   }
 
   &:after {
-    right: 10px;
+    right: 7px;
     bottom: 1px;
   }
 
@@ -48,12 +48,13 @@
 }
 
 .Widget-threePointsItem {
-  display: inline-block;
+  display: block;
+  position: absolute;
+  top: 6px;
+  left: 10px;
   width: 3px;
   height: 3px;
-  margin-top: -5px;
   border-radius: 50%;
-  vertical-align: middle;
 }
 
 .Widget-arrow {
